adding some tools